// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display error warning about required prop 1`] = `"Failed undefined type: The undefined \`displayPrice\` is marked as required in \`<<anonymous>>\`, but its value is \`undefined\`."`;

exports[`Renders price with a compare at price 1`] = `
.c0 {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
}

.c1 {
  color: #bfbfbf;
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
}

<div>
  <span
    className="c0"
  >
    $300.00
  </span>
  <del
    className="c1"
  >
    $400.00
  </del>
</div>
`;

exports[`Renders price without a compare at price 1`] = `
.c0 {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
}

<div>
  <span
    className="c0"
  >
    $300.00
  </span>
</div>
`;

exports[`Renders price without a compare at price, due to the fact that the prices are equal. 1`] = `
.c0 {
  display: block;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
}

<div>
  <span
    className="c0"
  >
    $300.00
  </span>
</div>
`;
